# embree_toy

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  conanfile.txt
src/: CMakeLists.txt  embree_toy.cc  embree_toy.h  main.cc
